# CryptaMPC

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp  mainpage.cpp  notes
src/arithmetic-sharing/: ICommChannel.h  config.h
src/crypto/include/: random.h
src/crypto/src/: random.cpp
src/include/: qst.h  types.h
src/include/crypto/: hash.h  hash_sha2_256.h  prng.h  prng_aes.h  sha2.h
src/include/io/: file_io.h  io.h  net_io.h
src/include/math/: bigint.h  group.h
src/include/mpc/protocols/gc/: 2pc.h  abit.h  feq.h  helper.h  leaky_deltaot.h  preprocessing.h
src/include/mpc/protocols/gc/circuits/: bristol_circuit.h  circuit.h
src/include/mpc/protocols/ot/: coot.h  cot.h  iknp.h  npot.h  ot.h
src/include/protocols/ot/: ot.h
src/include/utils/: utils.hpp
src/lib/: types.cpp
src/lib/crypto/: hash_sha2_256.cpp  prng.cpp  prng_aes.cpp  sha2.cpp
src/lib/gc/: main.cpp
src/lib/io/: net_io.cpp
src/lib/mpc/arithmetic-sharing/: main.cpp
src/lib/mpc/gc/circuits/: bristol_circuit.cpp  circuit_print.py  test_circuit
src/lib/mpc/gc/core_circuits/: compare64_netlist.txt  result.txt
src/lib/mpc/protocols/ot/: npot.cpp  ot.cpp
src/math/include/: algebraic_structures.h
src/protocols/src/: shamir.cpp  shamir2.cpp
test/: test_types.cpp
test/crypto/: test_prng.cpp
test/io/: test_netio.cpp
test/mpc/: test_2pc.cpp
test/mpc/gc/: test_2pc.cpp  test_abit.cpp  test_gc.cpp
test/mpc/ot/: test_coot.cpp  test_cot.cpp  test_npot.cpp
test/ot/: test_ot.cpp
